f: reworked inbound changes